--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "private": true,
   "main": "public/main.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.1",
     "electron": "^18.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.0.0-rc.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "electron:dev": "electron ."
+    "dev": "concurrently -k \"npm run react:dev\" \"npm run electron:dev\"",
+    "react:dev": "react-scripts start",
+    "react:build": "react-scripts build",
+    "react:test": "react-scripts test",
+    "electron:dev": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
     "extends": [
@@ -40,7 +47,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
+    "concurrently": "^7.1.0",
     "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "wait-on": "^6.0.1"
   }
 }
