--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.31",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
     "dayjs": "^1.11.1",
     "electron": "^18.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "typescript": "^4.6.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "zustand": "^4.0.0-rc.1"
@@ -47,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.5",
     "concurrently": "^7.1.0",
     "postcss": "^8.4.13",
