--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.3",
     "dayjs": "^1.11.1",
     "electron": "^18.2.0",
+    "electron-store": "^8.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
